--- a/resources/assets/sass/zmsaunders/header.scss
+++ b/resources/assets/sass/zmsaunders/header.scss
@@ -8,7 +8,7 @@ header {
 
         .img {
             float: left;
-            background: url('/assets/images/face.png') top left no-repeat;
+            background: url('/images/face.png') top left no-repeat;
             background-size: cover;
             width: 4em;
             height: 4em;
