--- a/public/css/main.css
+++ b/public/css/main.css
@@ -221,7 +221,7 @@ header {
     float: left; }
     header .me .img {
       float: left;
-      background: url("/assets/images/face.png") top left no-repeat;
+      background: url("/images/face.png") top left no-repeat;
       background-size: cover;
       width: 4em;
       height: 4em;
@@ -302,7 +302,7 @@ footer {
   color: #EFEFEF;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
   font-size: 3em;
-  background: #333 url("/assets/images/comp.jpg") center center no-repeat;
+  background: #333 url("/images/comp.jpg") center center no-repeat;
   background-size: cover; }
   @media screen and (min-width: 600px) {
     .about .hero {
