--- a/resources/assets/sass/zmsaunders/about.scss
+++ b/resources/assets/sass/zmsaunders/about.scss
@@ -5,7 +5,7 @@
         color: $c1;
         text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
         font-size: 3em;
-        background: #333 url('/assets/images/comp.jpg') center center no-repeat;
+        background: #333 url('/images/comp.jpg') center center no-repeat;
         background-size: cover;
 
         @include media(600px) {
